--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
                 You can collect preferred artwork </p>
             </div>
              <div class="main3-card">
-                <div class="main3-card1">
+                <div class="mainArr main3-card1">
                     <div class="main3-img1">
                         <img src="monkey_skeleton.png" id="mon_skel" alt="">
                     </div>
-                    <p class="main_apep main3-cardp" id="main3_cardpp">Ape Zombie with Lobster </p>
+                    <p class="main_apep" >Ape Zombie with Lobster </p>
                     <div class="main3-card1-cont">
                         <div class="main3-card-p">
                             <p>Current Bid</p>
@@ -119,7 +119,7 @@
                         <a href="" class="btn btn-btn">Place a Bid</a>
                     </div>
                 </div>
-                <div class="main3-card2">
+                <div class="mainArr main3-card2">
                     <div class="main3-img2">
                         <img src="monkeyy_nft.png" alt="">
                     </div>
@@ -132,7 +132,7 @@
                         <a href="" class="btn btn-btn">Place a Bid</a>
                     </div>
                 </div>
-                <div class="main3-card3">
+                <div class="mainArr main3-card3">
                     <div class="main3-img3">
                         <img src="monkeyyy.png" alt="">
                     </div>
